plugins {
    id 'java'
     id 'war' 
    id 'eclipse'
}

group = 'org.zerock'
version = '1.0-SNAPSHOT'

// 자바 17 버전 사용 설정
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // MariaDB 드라이버
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.6'
    
    // JUnit5 테스트 라이브러리
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.14.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.14.1'
    
    compileOnly("org.projectlombok:lombok:1.18.42")
	annotationProcessor("org.projectlombok:lombok:1.18.42")
	
	testCompileOnly("org.projectlombok:lombok:1.18.42")
	testAnnotationProcessor("org.projectlombok:lombok:1.18.42")
	
	providedCompile 'javax.servlet:javax.servlet-api:4.0.1'

    
    implementation group: 'com.zaxxer', name: 'HikariCP', version:'5.0.0'
	
	implementation 'org.modelmapper:modelmapper:3.2.0'
	
	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'

    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.17.2'
    testCompileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.42'
    
    implementation group: 'jstl', name: 'jstl', version: '1.2'
}

test {
    useJUnitPlatform()
    useJUnitPlatform()
    // 자바 모듈 시스템의 접근 제한을 해제하는 옵션
    jvmArgs += [
        '--add-opens', 'java.base/java.time=ALL-UNNAMED'
    ]
}